# sage-dashboard

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  LICENSE  QUICKSTART.md  README.md  ROADMAP.md  app.py  pyproject.toml  requirements.txt
.github/: AUTOMATION.md  CONTRIBUTING.md
.github/workflows/: code-quality.yml  weekly-snapshot.yml
.streamlit/: secrets.toml.example
docs/: MODEL_TRAINING.md  SUPABASE_SETUP.md  TESTING_GUIDE.md
pages/: 1_📊_Overview.py  2_🔍_Study_Search.py  3_🔬_Disease_Explorer.py  4_🎯_Rescue_Finder.py  5_📈_Trends.py  6_❓_FAQ.py
scripts/: README.md  backfill_snapshots.py  clear_database.py  create_snapshot.py  fetch_geo_studies.py  load_sample_data.py  map_studies_to_diseases_v2.py  model_status.py  seed_disease_mappings.py  train_sex_classifier.py  update_sex_inferrability.py  validate_model.py
sql/: schema.sql
src/sage/: __init__.py  data_loader.py  database.py  entrez_searcher.py  expression_fetcher.py  geo_fetcher.py  logging_config.py  metrics.py  model_database.py  model_persistence.py  model_training.py  model_validation.py  sex_inference.py  training_data_manager.py
tests/: __init__.py  test_data_loader.py  test_database.py  test_disease_explorer.py  test_entrez_searcher.py  test_expression_inference.py  test_geo_fetcher.py  test_metrics.py  test_model_database.py  test_model_persistence.py  test_model_training.py  test_model_validation.py  test_search_page.py  test_sex_inference.py  test_training_data_manager.py  test_training_fixtures.py
tests/fixtures/: __init__.py  geo_responses.py  training_fixtures.py
tests/fixtures/training_data/: __init__.py  sage_training_imbalanced.json  sage_training_tiny.json  sage_training_v1.json
